--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ NODE_ENV=development
 PORT=3007
 DATABASE_URL=postgres://esraa:1997@localhost:5432/academic_portal
 SECRET=any
+# Example .env file
+FAST_REFRESH=true
