--- a/academic-portal-frontend/package.json
+++ b/academic-portal-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "academic-portal-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3007",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
